--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.4",
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
