--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "homepage": "https://github.com/stbuiemory/2kPerDay#readme",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.1.6",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
-    "moment": "^2.29.4",
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
