--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
